--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,12 @@ jobs:
       with:
         name: Cucumber HTML Report
         path: thestarsaboveyou-automation/target/cucumber.html
+    
+    - uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: TestNG Reports
+        path: thestarsaboveyou-automation/target/surefire-reports
 
   Release:
     runs-on: ubuntu-latest
