--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,6 +46,10 @@ jobs:
       with:
         name: TestNG Reports
         path: thestarsaboveyou-automation/target/surefire-reports
+    
+    - name: Publish TestNG Report
+      if: always()
+      uses: scacap/action-surefire-report@v1
 
   Release:
     runs-on: ubuntu-latest
