--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,7 @@ jobs:
         cache: maven
     
     - name: Test with Maven
+      shell: cmd
       run: | 
         cd thestarsaboveyou-automation
         mvn -B test
